--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,11 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <!-- 카카오 API -->
+    <script
+      type="text/javascript"
+      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=16f753dbd07b5d576738d069b453da18&libraries=services,clusterer"
+    ></script>
 
     <title>2차프로젝트 초기세팅</title>
   </head>
