Design : add, book page Feat : Calendar, addPage npm i react-calendar : 리엑트 캘린더

--- a/public/index.html
+++ b/public/index.html
@@ -8,13 +8,15 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <!-- Favicon -->
+    <link rel="icon" href="%PUBLIC_URL%/assets/images/favicon.png" />
     <!-- 카카오 API -->
     <script
       type="text/javascript"
       src="//dapi.kakao.com/v2/maps/sdk.js?appkey=16f753dbd07b5d576738d069b453da18&libraries=services,clusterer"
     ></script>
 
-    <title>2차프로젝트 초기세팅</title>
+    <title>고기-로</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
